vlib/v/checker/tests/match_sumtype_multiple_types.out
vlib/v/checker/tests/match_sumtype_multiple_types.vv:26:13: error: type `Charlie` has no field or method `char`
   24 |     match l {
   25 |         Alfa, Charlie {
   26 |             assert l.char == `a`
      |                      ~~~~
   27 |             assert l.letter() == 'a'
   28 |         }
vlib/v/checker/tests/match_sumtype_multiple_types.vv:27:13: error: unknown method: `Charlie.letter`
   25 |         Alfa, Charlie {
   26 |             assert l.char == `a`
   27 |             assert l.letter() == 'a'
      |                      ~~~~~~~~
   28 |         }
   29 |         Bravo {